--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 *{
-    margin:0;
+    margin:0;      
     padding:0;
     font-family: 'Roboto', sans-serif;
     box-sizing:border-box ;
-}
+} 
 article{
     background-color:white;
     max-width:250px;
-    height:420px;
+    height:460px;
     margin:70px auto ;
     border-radius:10px;
     box-shadow:1px 1px 8px gray,-1px -1px 8px black;
@@ -74,15 +74,16 @@ aside{
     border:1px solid black;
     border-radius:20px;
     padding:5px;
-    color:rgb(82, 80, 80);
+    font-size: 12px;
+    color:rgb(109, 109, 109);
 }
 #follow{
-    margin: 30px auto;
+    margin: 30px auto 10px;
 }
 #follow a{
     text-decoration:none ;
     display:block ;
-    border:1px solid pink;
+    border:none  ;
     width:min-content;
     margin:0 auto;
     padding: 10px 25px;
@@ -95,6 +96,56 @@ aside{
 }
 #follow a:hover{
     background-color:rgb(119, 0, 119);
+    box-shadow:0.5px 0.5px 10px rgb(255, 116, 255);
     border-radius:20px 10px;
     transition:0.2s ease-in-out;
+}
+
+hr{
+    width: 95%;
+    margin:10px auto;
+    border:0.5px solid rgba(170, 170, 170, 0.671);
+}
+.dropdown {
+    position: relative;
+    display: inline-block;
+    width:100%;
+    text-align: center;
+    font-weight: 700;
+    cursor:pointer;
+}
+.dropdown p:hover,.dropdown p:active{
+    color: purple;
+    transition: 0.2s ease-in-out;
+}
+.dropdown p{
+    font-family: 'Sofia', cursive;}
+.dropdown a{
+    display: block;
+    text-decoration: none;
+    color: rgb(59, 58, 58);
+    padding: 5px 0;
+    font-weight: 500;
+}
+.dropdown a:hover{
+    background-color: purple;
+    color:white;
+    transition: .2s ease-in-out;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f3f0f0;
+    width:80%;
+    left:25px;
+    height: 20vh;
+    border-radius: 5px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.247);
+    z-index: 1;
+    scrollbar-width: none;    
+    overflow-y: scroll;
+} 
+.dropdown:hover .dropdown-content {
+    display: block;
 }
